framec_tests/language_specific/cpp/v3_facade_smoke/negative/transition_invalid_state_ident.frm
@target cpp

system S {
    machine:
        $A {
            e() {
                __frame_transition('1Bad');
            }
        }
}

